# release-manager

./: .env.example  .gitignore  README.md  STRUCTURE.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: cd.yml  ci.yml  db-migration.yml
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  DATABASE_IMPLEMENTATION_INDEX.md  DATABASE_SETUP_SUMMARY.md  DEVELOPMENT.md  Dockerfile  FILES_SUMMARY.txt  INDEX.md  Makefile  QUICKSTART.md  QUICK_START_DATABASE.md  README.md  STRUCTURE.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: analytics.py  approvals.py  audit_logs.py  auth.py  deployments.py  environments.py  health.py  releases.py  rollbacks.py  runbooks.py  services.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  approval.py  audit_log.py  base.py  deployment.py  deployment_metric.py  environment.py  pipeline_stage.py  release.py  rollback.py  runbook.py  service.py  team.py  user.py
backend/app/schemas/: __init__.py  approval.py  audit_log.py  common.py  deployment.py  deployment_metric.py  environment.py  pipeline_stage.py  release.py  rollback.py  runbook.py  service.py  team.py  user.py
backend/app/services/: audit.py  deployment.py
backend/scripts/: seed_data.py
docs/: database-migrations.md  deployment-guide.md  incident-response.md  rollback-procedure.md
frontend/: COMPLETED.txt  DIRECTORY_TREE.txt  Dockerfile  FILE_MANIFEST.md  QUICKSTART.md  README.md  SUMMARY.txt  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analytics.ts  auth.ts  client.ts  deployments.ts  releases.ts
frontend/src/components/: ApprovalCard.tsx  AuditLogTable.tsx  DeploymentTimeline.tsx  EmptyState.tsx  (+8 more)
infrastructure/kubernetes/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml
infrastructure/terraform/: artifact_registry.tf  cloudrun.tf  database.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  redis.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
(+14 files in other folders)
